JB: Update Jetty server dependencies to version 12